--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hardhat",
   "version": "1.0.0",
-  "description": "",
+  "description": "A DAO contract",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jamaltheatlantean",
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
